@@ -1,3 +1,8 @@
+2005-12-03 23:35 Mike Park  <mike.park@nasa.gov>
+
+	* src/grid.c (gridFindEnclosingCell) added tests to find
+	and correct the error handling of invalid cell.
+
 2005-12-03 21:00 Mike Park  <mike.park@nasa.gov>
 
 	* src/grid.c (gridBarycentricCoordinate) added tests to find
